"include M-" ==> "include MG-"
The idea is that global mixins get "MG-" and mixins designed to only be used in the current module just use "M-". MG stands for "Mixin Global". "M-" stands for "Mixin"

--- a/website/assets/sass/01-config-SASS/fonts-SASS/icon-names.scss
+++ b/website/assets/sass/01-config-SASS/fonts-SASS/icon-names.scss
@@ -7,7 +7,7 @@
 //	icons can be added to an element with the class
 //	.icon-ICON_NAME
 //	or it be added with a mixin like this:
-//	@include M-icon(icon_name, color, size);
+//	@include MG-icon(icon_name, color, size);
 //
 // if adding the icon using the class, the element
 //	holding the class does NOT need to be empty
