--- a/website/assets/sass/02-mixins-SASS/04-css-shapes.scss
+++ b/website/assets/sass/02-mixins-SASS/04-css-shapes.scss
@@ -1,5 +1,5 @@
 //basic line
-@mixin M-line ($type, $color, $length:25px,$thickness:2px, $rotation: false, $origin: center){
+@mixin MG-line ($type, $color, $length:25px,$thickness:2px, $rotation: false, $origin: center){
 	@if ($type == v){
 		height: $length;
 		width: 0px;
@@ -12,14 +12,14 @@
 		@error "#{$type} is not a valid type. must be either 'h' (horizontal) or 'v' (vertical)";
 	}
 	@if ($rotation != false){
-		@include M-rotate(strip-units($rotation), $origin);
+		@include MG-rotate(strip-units($rotation), $origin);
 	}
 }
 
 ///*******************\
 //	PURE CSS MENU ICON
 //*******************/
-@mixin M-menuIcon($color: #000, $width: 20px, $thickness: 5px, $gutter: 2px, $posType: relative, $margin: ($thickness + $gutter) auto, $animatable: true){
+@mixin MG-menuIcon($color: #000, $width: 20px, $thickness: 5px, $gutter: 2px, $posType: relative, $margin: ($thickness + $gutter) auto, $animatable: true){
 
 	@if (type-of($color) == 'color'){
 		$distance: $thickness + $gutter;
@@ -31,14 +31,14 @@
 
 		&, &:before, &:after {
 			@if($animatable){
-				@include M-animate;
+				@include MG-animate;
 			}
 			height: $thickness;
 			background-color: $color;
 			border-radius: $thickness;
 		}
 
-		@include M-before-after {
+		@include MG-before-after {
 			width: 100%;
 			position: absolute;
 			left: 0;
@@ -55,12 +55,12 @@
 	} @else if ($color == 'cross') {
 		background-color: transparent;
 		&:before {
-			@include M-rotate(45);
+			@include MG-rotate(45);
 			bottom: 0;
 			margin: 0;
 		}
 		&:after {
-			@include M-rotate(-45);
+			@include MG-rotate(-45);
 			top: 0;
 			margin: 0;
 		}
@@ -71,12 +71,12 @@
 			right: auto;
 		}
 		&:before {
-			@include M-rotate(90);
+			@include MG-rotate(90);
 			bottom: 0;
 			left: 0;
 		}
 		&:after {
-			@include M-rotate(0);
+			@include MG-rotate(0);
 			top: 0;
 			left: 0;
 		}
@@ -86,7 +86,7 @@
 }
 
 //use to alter the size of a menu icon with only the essential styles
-@mixin M-menuIcon-size ($width: 20px, $thickness: 5px, $gutter: 2px, $margin: ($thickness + $gutter) auto){
+@mixin MG-menuIcon-size ($width: 20px, $thickness: 5px, $gutter: 2px, $margin: ($thickness + $gutter) auto){
 
 		$distance: $thickness + $gutter;
 
@@ -113,7 +113,7 @@
 
 //$thickness is half the width of the side furthest from the point.
 
-@mixin M-tri($direction, $color: #000, $length: 12px, $thickness: $length, $thickness2: $thickness, $important: true) {
+@mixin MG-tri($direction, $color: #000, $length: 12px, $thickness: $length, $thickness2: $thickness, $important: true) {
 
 	@if ($important){
 		$important: !important;
@@ -167,56 +167,56 @@
 //***********************************/
 //IE9+ only
 //works best if $thickness is a multiple of 2
-@mixin M-arrow($direction, $color, $length, $head-size: $length * 0.75, $thickness: 2px, $rotation: 0, $origin: center){
+@mixin MG-arrow($direction, $color, $length, $head-size: $length * 0.75, $thickness: 2px, $rotation: 0, $origin: center){
 	position: relative;
 	display: block;
 
 	@if ( ($direction == left) or ($direction == right) ){
 		@if ($rotation != 0){
-			@include M-line(h,$color,$length, $thickness, $rotation, $origin);
+			@include MG-line(h,$color,$length, $thickness, $rotation, $origin);
 		} @else {
-			@include M-line(h,$color,$length, $thickness);
+			@include MG-line(h,$color,$length, $thickness);
 		}
 	} @else {
 		@if ($rotation != 0){
-			@include M-line(v,$color,$length, $thickness, $rotation, $origin);
+			@include MG-line(v,$color,$length, $thickness, $rotation, $origin);
 		} @else {
-			@include M-line(v,$color,$length, $thickness);
+			@include MG-line(v,$color,$length, $thickness);
 		}
 	}
 
-	@include M-before {
+	@include MG-before {
 		position: absolute;
 		border: $thickness solid $color;
-		@include M-size($head-size);
+		@include MG-size($head-size);
 
 		@if ($direction == up){
 			right: ($thickness/2);
 			top: -($thickness/2);
 			border-bottom: none;
 			border-left: none;
-			@include M-rotate(-45,top right);
+			@include MG-rotate(-45,top right);
 
 		} @else if ($direction == down) {
 			right: ($thickness/2);
 			bottom: -($thickness/2);
 			border-top: none;
 			border-left: none;
-			@include M-rotate(45,bottom right);
+			@include MG-rotate(45,bottom right);
 
 		} @else if ($direction == left) {
 			left: -($thickness/2);
 			bottom: -($thickness/2);
 			border-top: none;
 			border-right: none;
-			@include M-rotate(45,bottom left);
+			@include MG-rotate(45,bottom left);
 
 		} @else if ($direction == right) {
 			right: -($thickness/2);
 			bottom: -($thickness/2);
 			border-top: none;
 			border-left: none;
-			@include M-rotate(-45,bottom right);
+			@include MG-rotate(-45,bottom right);
 		}
 
 	}
@@ -227,21 +227,21 @@
 /////////////
 
 
-@mixin M-circle($type, $color, $width, $thickness: 2px,$height:$width){
+@mixin MG-circle($type, $color, $width, $thickness: 2px,$height:$width){
 
 	border-radius: 50%;
 	display: block;
 
 	@if ($width == 'auto') {
-		@include M-size($height,$width);
+		@include MG-size($height,$width);
 	} @else if (unit($width) == '%') {
 		width: $width;
 		padding: $width 0 0 0;
 		height: 0;
 	} @else if (unitless($width) == false) {
-		@include M-size($height,$width);
+		@include MG-size($height,$width);
 	} @else {
-		@warn '"#{$width}" is not a valid width. @include M-circle(type, color, width, border-thickness* (stroke type only), height*). * = optional'
+		@warn '"#{$width}" is not a valid width. @include MG-circle(type, color, width, border-thickness* (stroke type only), height*). * = optional'
 	}
 
 	@if ($type == 'fill' and $color != 'none'){
@@ -253,7 +253,7 @@
 	}
 
 	@if ($type != 'fill' and $type != 'stroke' ){
-		@warn '"#{$type}" is not a valid circle type. Please select either "fill" or "stroke". @include M-circle(type, color, width, border-thickness* (stroke type only), height*). * = optional'
+		@warn '"#{$type}" is not a valid circle type. Please select either "fill" or "stroke". @include MG-circle(type, color, width, border-thickness* (stroke type only), height*). * = optional'
 	}
 }
 
@@ -262,17 +262,17 @@
  // Plus and Minus shapes //
 ///////////////////////////
 
-@mixin M-plus-minus-base($color) {
+@mixin MG-plus-minus-base($color) {
 		display: block;
 		content: '';
-		@include M-centered;
+		@include MG-centered;
 		background: $color;
 }
 
-@mixin M-plus($color, $size: 10px, $thickness: 2px, $rounded: false, $pos: relative){
+@mixin MG-plus($color, $size: 10px, $thickness: 2px, $rounded: false, $pos: relative){
 	position: $pos;
 	&:before, &:after {
-		@include M-plus-minus-base($color);
+		@include MG-plus-minus-base($color);
 		@if ($rounded){
 			border-radius: $thickness * 2;
 		}
@@ -289,11 +289,11 @@
 		width: $size;
 	}
 }
-@mixin M-minus($color, $size: 10px, $thickness: 2px){
+@mixin MG-minus($color, $size: 10px, $thickness: 2px){
 	position: relative;
 	//horizontal
 	&:after {
-		@include M-plus-minus-base($color);
+		@include MG-plus-minus-base($color);
 		height: $thickness;
 		width: $size;
 		@content;
@@ -301,21 +301,21 @@
 }
 
 //Works in IE9+, use a cross icon as a backup if needed
-@mixin M-cross($color, $size: 20px, $thickness: 5px, $rounded: true, $backup-icon: false){
+@mixin MG-cross($color, $size: 20px, $thickness: 5px, $rounded: true, $backup-icon: false){
 	@if (($lt-ie9 == false) and $backup-icon == false){
-		@include M-plus($color,$size,$thickness,$rounded){
-			@include M-rotate(45);
+		@include MG-plus($color,$size,$thickness,$rounded){
+			@include MG-rotate(45);
 			@content;
 		};
 	} @else {
-		@include M-before {
+		@include MG-before {
 			content: 'X';
 			color: $color;
-			@include M-icon-size($size, $width: 100%);
+			@include MG-icon-size($size, $width: 100%);
 			font-family: Arial, Helvetica, sans-serif;
 			@content;//careful with the @content
 		}
-		/*@include M-icon($backup-icon, $size){
+		/*@include MG-icon($backup-icon, $size){
 			color: $color;
 			@content;//careful with the @content if using a backup
 		}*/
