--- a/website/assets/sass/02-mixins-SASS/10-flex-mixins.scss
+++ b/website/assets/sass/02-mixins-SASS/10-flex-mixins.scss
@@ -4,62 +4,62 @@ $flexPrefixes: ms webkit;
 
 
 //shortcut for displaying as Flexbox
-@mixin M-flex {
+@mixin MG-flex {
 	display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
 	display: -ms-flexbox;      /* TWEENER - IE 10 */
 	display: -webkit-flex;     /* NEW - Chrome */
 	display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
 }
-%flex { @include M-flex; }
+%flex { @include MG-flex; }
 
 //control how the flexbox wraps
-@mixin M-flexWrap($isEnabled:true, $important: unquote('')){
+@mixin MG-flexWrap($isEnabled:true, $important: unquote('')){
 	@if ($isEnabled == true){
-		@include M-prefix(flex-wrap, wrap $important, $flexPrefixes);
+		@include MG-prefix(flex-wrap, wrap $important, $flexPrefixes);
 	} @else if ($isEnabled == 'reverse'){
-		@include M-prefix(flex-wrap, wrap-reverse $important, $flexPrefixes);
+		@include MG-prefix(flex-wrap, wrap-reverse $important, $flexPrefixes);
 	} @else if ($isEnabled == false) {
-		@include M-prefix(flex-wrap, nowrap $important, $flexPrefixes);
+		@include MG-prefix(flex-wrap, nowrap $important, $flexPrefixes);
 	} @else {
 		@error '"#{$isEnabled}" is an invalid property for M-flexWrap. Valid properties are: true, false, and reverse';
 	}
 }
-%flexWrap { @include M-flexWrap; }
+%flexWrap { @include MG-flexWrap; }
 
-@mixin M-flexDirection($direction: row){
-	@include M-prefix(flex-direction,$direction, $flexPrefixes);
+@mixin MG-flexDirection($direction: row){
+	@include MG-prefix(flex-direction,$direction, $flexPrefixes);
 }
 
-@mixin M-flexFlow($directionWrap){
-	@include M-prefix(flex-flow,$directionWrap, $flexPrefixes);
+@mixin MG-flexFlow($directionWrap){
+	@include MG-prefix(flex-flow,$directionWrap, $flexPrefixes);
 }
 
-@mixin M-flexReverse($direction: row){
+@mixin MG-flexReverse($direction: row){
 	@if($direction == row) {
-		@include M-flexFlow(row-reverse wrap-reverse);
+		@include MG-flexFlow(row-reverse wrap-reverse);
 	} @else {
-		@include M-flexFlow(column-reverse wrap-reverse);
+		@include MG-flexFlow(column-reverse wrap-reverse);
 	}
 }
 
 
-@mixin M-flexAlign($alignment: center){
-	@include M-prefix(justify-content,$alignment, $flexPrefixes);
+@mixin MG-flexAlign($alignment: center){
+	@include MG-prefix(justify-content,$alignment, $flexPrefixes);
 }
 
-@mixin M-flexAlignSelf($alignment: center){
-	@include M-prefix(align-self,$alignment, $flexPrefixes);
+@mixin MG-flexAlignSelf($alignment: center){
+	@include MG-prefix(align-self,$alignment, $flexPrefixes);
 }
 
 //verticaly align inner content
-@mixin M-flexValign($alignment: center) {
-	@include M-prefix(align-items,$alignment, $flexPrefixes);
+@mixin MG-flexValign($alignment: center) {
+	@include MG-prefix(align-items,$alignment, $flexPrefixes);
 }
 
 //Flexbox doesn't like pixel widths.
 //This mixin allows an element to stay a constant width even when flex grow is applied to it.
 //The siblings of this element will grow/shrink to fit to fill the container  
-@mixin M-flexForceWidth($width){
+@mixin MG-flexForceWidth($width){
 	@if ($width == false) {
 		max-width: none;
 		min-width: 0;
@@ -70,6 +70,6 @@ $flexPrefixes: ms webkit;
 	}
 }
 
-@mixin M-flexGrow($amount: 1){
-	@include M-prefix(flex-grow,$amount, $flexPrefixes);
+@mixin MG-flexGrow($amount: 1){
+	@include MG-prefix(flex-grow,$amount, $flexPrefixes);
  }
