--- a/website/assets/sass/04-base-SASS/icon-classes.scss
+++ b/website/assets/sass/04-base-SASS/icon-classes.scss
@@ -16,7 +16,7 @@
 	    .#{$iconPrefix}-#{$icon}:before {
 	        content: $referenceKey !important;
 			@if ($icon == 'spinner'){
-				@include M-spin;
+				@include MG-spin;
 			}
 	    }
 	}
