--- a/website/assets/sass/05-modules-SASS/ZZ-SWORDION-ONLY/swordion-only.scss
+++ b/website/assets/sass/05-modules-SASS/ZZ-SWORDION-ONLY/swordion-only.scss
@@ -9,13 +9,13 @@
 #logo {
 	padding: 50px;
 	margin: 0;
-	@include M-icon(pdf){
+	@include MG-icon(pdf){
 		color: #000;
 	};
 }
 
 .hyphenTest {
-	@include M-hyphenate;
+	@include MG-hyphenate;
 	width: 100px;
 }
 
@@ -26,10 +26,10 @@
 .full-screen-div-example { background: #F1F49F; }
 
 .arrow {
-	&.up { @include M-arrow(up,green,50px);  margin: 0 30px; }
-	&.down { @include M-arrow(down,green,50px); margin: 0 30px; }
-	&.left { @include M-arrow(left,green,50px); margin: 30px 0; }
-	&.right { @include M-arrow(right,green,50px); margin: 30px 0; }
+	&.up { @include MG-arrow(up,green,50px);  margin: 0 30px; }
+	&.down { @include MG-arrow(down,green,50px); margin: 0 30px; }
+	&.left { @include MG-arrow(left,green,50px); margin: 30px 0; }
+	&.right { @include MG-arrow(right,green,50px); margin: 30px 0; }
 }
 
 /**********************************
@@ -59,7 +59,7 @@
 		left: 100%;
 	}
 	.simple3 {
-		@include M-scale(0);
+		@include MG-scale(0);
 	}
 
 	.simple4 {
@@ -74,14 +74,14 @@
 	&.stage-1-JS {
 		.simple1 {
 			//since the animations won't play backwards, put the animation timings in the stage to control timings easier
-			@include M-animate(1s);
+			@include MG-animate(1s);
 			opacity: 1;
 		}
 	}
 	//2nd box slides in from top right corner
 	&.stage-2-JS {
 		.simple2 {
-			@include M-animate(0.5s);
+			@include MG-animate(0.5s);
 			bottom: 0;
 			left: 0;
 		}
@@ -90,8 +90,8 @@
 	&.stage-3-JS {
 		.simple3 {
 			//if using one of the default settings for animation duration, the @extend version instead
-			@include M-animate(2s); //(goes for 0.5s)
-			@include M-scale(1);
+			@include MG-animate(2s); //(goes for 0.5s)
+			@include MG-scale(1);
 		}
 	}
 	//4th box has a bit of a spin effect in
@@ -102,35 +102,35 @@
 				70% (rotate: 360),
 				100% (opacity: 1, rotate: 0),
 			;
-			@include M-kf-animate(simple4animation, $simple4animation, 2s, 1);
+			@include MG-kf-animate(simple4animation, $simple4animation, 2s, 1);
 		}
 	}
 }
 
 .navPrimary {
-	@include M-mq(max,bp('tablet')){
-		@include M-prefix(flex-wrap, wrap, $flexPrefixes);
+	@include MG-mq(max,bp('tablet')){
+		@include MG-prefix(flex-wrap, wrap, $flexPrefixes);
 	}
 	&__item {
 		border-left: 1px solid #ccc;
 		&:first-child { border-left: none; }
-		@include M-mq(max,bp('tablet')){
+		@include MG-mq(max,bp('tablet')){
 			width: 50%;
 		}
-		@include M-mq(max,bp('mobile')){
+		@include MG-mq(max,bp('mobile')){
 			width: 100%;
 		}
 	}
 	&__link {
-		@include M-grad(rgba(#fff,0.4),rgba(#000,0.6));
+		@include MG-grad(rgba(#fff,0.4),rgba(#000,0.6));
 		background-color: $CB-blue-mid;
-		@include M-animate(0.2s);
+		@include MG-animate(0.2s);
 		color: #fff;
 		text-align: center;
-		@include M-hover {
+		@include MG-hover {
 			background-color: $CB-blue-dark;
 			text-decoration: none;
-			@include M-pos(20px center);
+			@include MG-pos(20px center);
 		}
 	}
 }
