--- a/website/assets/sass/05-modules-SASS/ZZ-SWORDION-ONLY/tiltParallax.scss
+++ b/website/assets/sass/05-modules-SASS/ZZ-SWORDION-ONLY/tiltParallax.scss
@@ -10,6 +10,6 @@
 			margin: -25px 0 0 -25px;
 			top: 50%!important;
 			left: 50%!important;
-			@include M-size(50px);
+			@include MG-size(50px);
 		}
 }
