--- a/website/assets/sass/05-modules-SASS/ZZ-animation-modules/popins.scss
+++ b/website/assets/sass/05-modules-SASS/ZZ-animation-modules/popins.scss
@@ -3,5 +3,5 @@
 	> * {
 		opacity: 0;
 	}
-	> .popins__item--isActivated-JS { @include M-popin; }
+	> .popins__item--isActivated-JS { @include MG-popin; }
 }
