--- a/website/assets/sass/05-modules-SASS/externalLink.scss
+++ b/website/assets/sass/05-modules-SASS/externalLink.scss
@@ -1,5 +1,5 @@
 .standardContent .externalLink-JS {
-	@include M-icon('external', $CB-grey-dim, $pos:after){
+	@include MG-icon('external', $CB-grey-dim, $pos:after){
 		margin-left: 2px;
 		font-size: 0.75em;
 		vertical-align: text-top;
