--- a/website/assets/sass/05-modules-SASS/table.scss
+++ b/website/assets/sass/05-modules-SASS/table.scss
@@ -13,13 +13,13 @@ table{
 	&:first-child {
 		margin-top: 0;
 	}
-	th, td { padding: 5px; border: 1px solid #fff; padding: 10px; @include M-font-size(15px); text-align: left; }
+	th, td { padding: 5px; border: 1px solid #fff; padding: 10px; @include MG-font-size(15px); text-align: left; }
 	th {
 		font-weight: $normal;
 	}
 	thead {
 		th {
-			//@include M-font-size(18px);
+			//@include MG-font-size(18px);
 			//background-color: rgba($C-thead-th,0.8);
 		}
 		tr:first-child {
@@ -30,7 +30,7 @@ table{
 			}
 		}
 		.infoTip { color: #fff; border-color: #fff;
-			@include M-hover {
+			@include MG-hover {
 				background-color: tint(CG-prominence(2), 20%);
 				background-color: rgba(#fff, 0.2);
 			}
@@ -52,8 +52,8 @@ table{
 	&:first-child {
 		margin-top: 0;
 	}
-	@include M-mq($MQ-tables--have-overflow){
-		@include M-overflowShadow(h);
+	@include MG-mq($MQ-tables--have-overflow){
+		@include MG-overflowShadow(h);
 		max-width: 100%;
 	}
 }
