--- a/website/assets/sass/02-mixins-SASS/02-css3-shortening.scss
+++ b/website/assets/sass/02-mixins-SASS/02-css3-shortening.scss
@@ -3,7 +3,7 @@
 //		CSS 3 shortening
 //************************************/
 
-@mixin M-opacity($opacity){
+@mixin MG-opacity($opacity){
 	@if ($lt-ie9 == false){
 		opacity: $opacity;
 	} @else {
@@ -15,15 +15,15 @@
 }
 //opacity 0 and 1 are the most common settings,
 //use this if no other rules needed
-%opacity-0 { @include M-opacity(0); }
-%opacity-1 { @include M-opacity(1); }
+%opacity-0 { @include MG-opacity(0); }
+%opacity-1 { @include MG-opacity(1); }
 
 //BOX SHADOW no longer needs pre-fixes
 
 //BORDER RADIUS no longer needs pre-fixes
 
 //change the origin point of css transforms
-@mixin M-origin ($origin: 0px 0px) {
+@mixin MG-origin ($origin: 0px 0px) {
 	@if ($gt-ie8) {
 		-webkit-transform-origin: $origin;
 			-ms-transform-origin: $origin;
@@ -33,50 +33,50 @@
 
 //CSS3 element rotation
 //$axis accepts X or Y (capitalised)
-@mixin M-rotate ($angle: 90,$origin: center, $axis: unquote('')) {
+@mixin MG-rotate ($angle: 90,$origin: center, $axis: unquote('')) {
 	@if ($gt-ie8) {
 		-webkit-transform: unquote('rotate#{$axis}(#{$angle}deg)'); //* Safari and Chrome */
 		    -ms-transform: unquote('rotate#{$axis}(#{$angle}deg)'); //* IE 9 */
 		        transform: unquote('rotate#{$axis}(#{$angle}deg)');
 
 		@if ($origin != center) {
-			@include M-origin($origin);
+			@include MG-origin($origin);
 		}
 	}
 }
 
 
 //CSS3 element scale
-@mixin M-scale ($scale: 1,$origin: center) {
+@mixin MG-scale ($scale: 1,$origin: center) {
 	@if ($gt-ie8) {
 		-webkit-transform: scale($scale);
 			-ms-transform: scale($scale);
 				transform: scale($scale);
 
 		@if ($origin != center) {
-			@include M-origin($origin);
+			@include MG-origin($origin);
 		}
 	}
 }
 //scale 1 and 0 are the most commonly used values
-%scale-1 { @include M-scale(1); }
-%scale-0 { @include M-scale(0); }
+%scale-1 { @include MG-scale(1); }
+%scale-0 { @include MG-scale(0); }
 
-@mixin M-skew ($skew: -45deg,$origin: center) {
+@mixin MG-skew ($skew: -45deg,$origin: center) {
 	@if ($gt-ie8) {
 		-webkit-transform: skew($skew);
 			-ms-transform: skew($skew);
 				transform: skew($skew);
 
 		@if ($origin != center) {
-			@include M-origin($origin);
+			@include MG-origin($origin);
 		}
 	}
 }
 
 
 //just to help with prefixing
-@mixin M-transform($values){
+@mixin MG-transform($values){
 		-webkit-transform: $values;
 			-ms-transform: $values;
 				transform: $values;
