--- a/website/assets/sass/02-mixins-SASS/05-icon-mixins.scss
+++ b/website/assets/sass/02-mixins-SASS/05-icon-mixins.scss
@@ -7,13 +7,13 @@
 //	These are the mixins you would use in your
 //	style sheet:
 
-//	@include M-icon(icon_name, color, icon_size, box_size);
+//	@include MG-icon(icon_name, color, icon_size, box_size);
 	// the standard way to add an icon with scss
 
-//	@include M-mq-icon(icon_name, color, icon_size, box_size);
+//	@include MG-mq-icon(icon_name, color, icon_size, box_size);
 	//(same as M-icon() but self contained for media queries)
 
-//	@include M-icon-size(icon_size, box_size);
+//	@include MG-icon-size(icon_size, box_size);
 	// set the size of an icon that was added using a class
 
 //	icon(icon_name);
@@ -34,7 +34,7 @@
 ///////////////////////
 
 //styles that are the same for all icons
-@mixin M-icon-static-styles {
+@mixin MG-icon-static-styles {
 	font-style: normal;
 	font-weight: normal;
 	font-variant: normal;
@@ -51,11 +51,11 @@
 }
 
 %M-icon-static-styles {
-	@include M-icon-static-styles;
+	@include MG-icon-static-styles;
 }
 
 //styles that require altering from icon to icon
-@mixin M-icon-dynamic-styles($icon, $color: inherit, $size: 16px, $height: $size, $width:$height, $display: inline-block, $family: 'icons'){
+@mixin MG-icon-dynamic-styles($icon, $color: inherit, $size: 16px, $height: $size, $width:$height, $display: inline-block, $family: 'icons'){
 	$iconSet: $icons;
 	@if ($family == 'homeIcons'){
 		$iconSet: $homeIcons;
@@ -66,7 +66,7 @@
 	@if ( $color != inherit ){
 		color: $color;
 	}
-	@include M-icon-size($size, $height, $width);
+	@include MG-icon-size($size, $height, $width);
 }
 
 
@@ -77,7 +77,7 @@
 
 //set the size of the icon and makes it work with the M-centered mixin
 //This is good on it's own when addressing an icon that was added with an icon class
-@mixin M-icon-size ($size, $height: $size, $width: $height ) {
+@mixin MG-icon-size ($size, $height: $size, $width: $height ) {
 	@if ($size != false){
 		$lineHeight: round($height * 0.8);
 		@if ($height != $size){
@@ -85,30 +85,30 @@
 		}
 		font-size: $size;
 		line-height: $lineHeight;
-		@include M-size($height, $width);
+		@include MG-size($height, $width);
 		text-align: center;
 	}
 }
 
 //add an icon through a css rule
-@mixin M-icon($icon, $color: inherit, $size: false, $height: $size, $width: $height, $display: inline-block, $pos: before, $family: 'icons') {
+@mixin MG-icon($icon, $color: inherit, $size: false, $height: $size, $width: $height, $display: inline-block, $pos: before, $family: 'icons') {
 
 	@if ($pos == before){
 		&:before {
-			@include M-icon-static-styles;
-			@include M-icon-dynamic-styles($icon, $color, $size, $height, $width, $display, $family);
+			@include MG-icon-static-styles;
+			@include MG-icon-dynamic-styles($icon, $color, $size, $height, $width, $display, $family);
 			@content;
 		}
 	} @else if ($pos == after){
 		&:after {
-			@include M-icon-static-styles;
-			@include M-icon-dynamic-styles($icon, $color, $size, $height, $width, $display, $family);
+			@include MG-icon-static-styles;
+			@include MG-icon-dynamic-styles($icon, $color, $size, $height, $width, $display, $family);
 			@content;
 		}
 	}  @else if ($pos == both){
 		&:before, &:after {
-			@include M-icon-static-styles;
-			@include M-icon-dynamic-styles($icon, $color, $size, $height, $width, $display, $family);
+			@include MG-icon-static-styles;
+			@include MG-icon-dynamic-styles($icon, $color, $size, $height, $width, $display, $family);
 			@content;
 		}
 	}
