--- a/website/assets/sass/04-base-SASS/form-elements-SASS/01-text-inputs.scss
+++ b/website/assets/sass/04-base-SASS/form-elements-SASS/01-text-inputs.scss
@@ -6,12 +6,12 @@ textarea {
 	width: 100%;
 	color: $CG-input;
 	border-radius: 0!important;
-	@include M-appearanceNone;
-	@include M-animate('fast');
-	@include M-placeholder;
-	@include M-hover { background-color: $CG-input-focus; }
+	@include MG-appearanceNone;
+	@include MG-animate('fast');
+	@include MG-placeholder;
+	@include MG-hover { background-color: $CG-input-focus; }
 	&.#{$errorClass} { background-color: $CG-error-bg; border-color: $CG-error-border;
-		@include M-hover {
+		@include MG-hover {
 			background-color: $CG-error-bg--hover;
 		}
 	}
