--- a/website/assets/sass/04-base-SASS/form-elements-SASS/checkboxes-radios.scss
+++ b/website/assets/sass/04-base-SASS/form-elements-SASS/checkboxes-radios.scss
@@ -34,7 +34,7 @@ $C-checkbox-bg--hover: $CB-grey-light;
 			}
 			//background
 			&:before {
-				@include M-size(15px);
+				@include MG-size(15px);
 				background-color: #fff;
 				border: 1px solid $C-checkbox-border;
 				top: 2px;
@@ -44,7 +44,7 @@ $C-checkbox-bg--hover: $CB-grey-light;
 			//foreground
 			&:after {
 				background-color: $C-checkbox-check;
-				@include M-size(9px);
+				@include MG-size(9px);
 				top: 5px;
 				left: 3px;
 				opacity: 0;
@@ -106,7 +106,7 @@ $C-checkbox-bg--hover: $CB-grey-light;
 
 	//Use this for tick check marks. Remove this for square check marks
 	input[type="checkbox"] + label {
-		@include M-icon('checkmark', $C-checkbox-check, 10px, $pos: after){
+		@include MG-icon('checkmark', $C-checkbox-check, 10px, $pos: after){
 			left: 3px;
 			top: 5px;
 			background: transparent;
