--- a/website/assets/sass/05-modules-SASS/breadcrumb.scss
+++ b/website/assets/sass/05-modules-SASS/breadcrumb.scss
@@ -11,8 +11,8 @@ $C-nonLink: $CB-grey-dim;
 		margin-left: 15px;
 		position: relative;
 		color: $C-nonLink;
-		@include M-icon('arrow-right',$C-nonLink,13px,$width:8px){
-			@include M-centered(v);
+		@include MG-icon('arrow-right',$C-nonLink,13px,$width:8px){
+			@include MG-centered(v);
 			left: 0;
 		};
 		&:first-child {
@@ -32,7 +32,7 @@ $C-nonLink: $CB-grey-dim;
 			}
 		}
 			&__icon {
-				@include M-icon-size(20px);
+				@include MG-icon-size(20px);
 				position: relative;
 				top: 1px;
 			}
